# wrapper

./: .clang-format  .gitignore  .gitmodules  BUILD.bazel  CMakeLists.txt  README  VERSION  WORKSPACE  package.json
bazel/: compiler.bzl  deps_build_all.bzl  deps_setup.bzl
cmake/: FindGRPC.cmake
debian/: control
electron-app/: main.js  multipass.sh  package.json
electron-app/app/: index.css  index.html  main.js  package.json
include/multipass/: cloud_init_iso.h  platform.h  progress_monitor.h  query.h  simplestreams.h  ssh_key.h  url_downloader.h  virtual_machine.h  virtual_machine_description.h  virtual_machine_execute.h  virtual_machine_factory.h  vm_image.h  vm_image_fetcher.h  vm_image_host.h  vm_image_info.h  vm_image_query.h  vm_image_vault.h  vm_status_monitor.h
include/multipass/cli/: argparser.h  cli.h  command.h
include/multipass/ssh/: openssh_key_provider.h  ssh_key_provider.h  ssh_session.h
snap/: snapcraft.yaml
snap/gui/: multipass.desktop
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  cli.cpp
src/client/: CMakeLists.txt  argparser.cpp  client.cpp  client.h  main.cpp
src/client/cmd/: CMakeLists.txt  command.h  connect.cpp  connect.h  connect_unix.cpp  connect_unix.h  create.cpp  create.h  destroy.cpp  destroy.h  empty_trash.cpp  exec.cpp  exec.h  exec_unix.cpp  exec_unix.h  execute_helper.cpp  execute_helper.h  help.cpp  info.cpp  launch.cpp  launch.h  list.cpp  list.h  recover.cpp  ssh.cpp  ssh.h  start.cpp  start.h  stop.cpp  stop.h  trash.cpp  trash.h  version.cpp  version.h
src/daemon/: CMakeLists.txt  base_cloud_init_config.h  daemon.cpp  daemon.h  daemon_config.cpp  daemon_config.h  daemon_main.cpp  daemon_rpc.cpp  daemon_rpc.h  default_vm_image_vault.cpp  default_vm_image_vault.h  ubuntu_image_host.cpp  ubuntu_image_host.h  vm_image_repository.cpp  vm_image_repository.h
src/iso/: cloud_init_iso.cpp
src/network/: CMakeLists.txt  url_downloader.cpp
src/petname/: make_name_generator.cpp  petname.cpp
src/platform/: CMakeLists.txt  platform.cpp
src/platform/backends/: CMakeLists.txt
src/platform/backends/hyperkit/: CMakeLists.txt  hyperkit_virtual_machine.cpp  hyperkit_virtual_machine.h  hyperkit_virtual_machine_factory.cpp  hyperkit_virtual_machine_factory.h
src/platform/backends/hyperv/: CMakeLists.txt  hyperv_virtual_machine.cpp  hyperv_virtual_machine.h  hyperv_virtual_machine_factory.cpp  hyperv_virtual_machine_factory.h
src/platform/backends/lxd/: lxd_vm_image_vault.cpp  lxd_vm_image_vault.h
src/platform/backends/qemu/: CMakeLists.txt  openssh_key_provider.cpp  openssh_key_provider.h  qemu_virtual_machine.cpp  qemu_virtual_machine.h  qemu_virtual_machine_execute.cpp  qemu_virtual_machine_execute.h  qemu_virtual_machine_factory.cpp  qemu_virtual_machine_factory.h  qemu_vm_image_fetcher.cpp  qemu_vm_image_fetcher.h
src/rpc/: CMakeLists.txt  multipass.proto
src/simplestreams/: CMakeLists.txt  simple_streams_manifest.cpp  simplestreams.cpp
src/ssh/: CMakeLists.txt  openssh_key_provider.cpp  ssh_session.cpp
tests/: CMakeLists.txt  file_reader.cpp  main.cpp  mock_status_monitor.h  mock_virtual_machine_factory.h  mock_vm_image_fetcher.h  stub_image_host.h  stub_ssh_key.h  stub_ssh_key_provider.h  stub_status_monitor.h  stub_virtual_machine.h  stub_virtual_machine_factory.h  stub_vm_image_fetcher.h  stub_vm_image_vault.h  test_cli_client.cpp  test_daemon.cpp  test_data_path.cpp  test_data_path.h  test_hyperkit_backend.cpp  test_hyperv_backend.cpp  test_image_vault.cpp  test_qemu_backend.cpp  test_simple_streams_manifest.cpp  test_simplestreams.cpp  test_ssh_key_provider.cpp  test_ubuntu_image_host.cpp
tests/lxd/: mock_lxd_server_responses.h  test_lxd_image_vault.cpp
tests/test_data/: evil_index.json  multiple_versions_manifest.json  test_index.json  test_manifest.json
